--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://wweiyang.github.io/projectnetflik",
   "name": "projectnetflik",
   "version": "0.1.0",
   "private": true,
