--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^8.2.1",
     "fuse.js": "5.2.3",
     "gh-pages": "^3.1.0",
     "normalize.css": "8.0.1",
