Change homepage in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://wweiyang.github.io/projectnetflik",
+  "homepage": ".",
   "name": "projectnetflik",
   "version": "0.1.0",
   "private": true,
